--- a/docs/src/content/docs/Installation.mdx
+++ b/docs/src/content/docs/Installation.mdx
@@ -3,26 +3,77 @@ title: Installation
 description: Guide to install Kissflow sdk
 ---
 Kissflow lets you build custom UI components and import them as reusable custom components in your app. You can use plain HTML or frontend frameworks like React to build your component. 
+To make your component interact and communicate with your app, you can install the Kissflow SDK in your project.
 
-To make your component interact and communicate with your app, you can install the Kissflow SDK in your project. If you already have an existing project, you can follow [these](/lcnc-sdk-js/intro/installation/) instructions to install the SDK package.
+
+:::note[Note]
+This package is exclusively designed for the client/browser side of your projects. So we only support ECMAScript modules (es modules) and Universal Module Definition (UMD) formats of javascript.
+:::
+
 
 ## 1. Creating a new custom component
 
-If you're starting a project from scratch, you can create a Kissflow custom component package using npm
+If you're starting a project from scratch, you can create a Kissflow custom component package using `npm create`
 ```js
-npm create kf-component
+npm create kf-component@latest
 ```
 
 You'll be prompted to provide a name for you component and choose between **HTML** or **React**. Once installed, run the following commands:
 
-```js
-cd componentname
-npm install
-npm run dev
-```
+import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-Once development is done, you can use the **`npm run build`** command to build and compress the project into a zip file. You can then import this zip file direclty into Kissflow as a custom component.
-> This package is exclusively designed for the client side of your projects. So we only support ECMAScript modules (es modules) and Universal Module Definition (UMD) formats of javascript.
+<Tabs>
+  <TabItem label="npm">    
+    ```js
+    // To chagne directory
+    cd componentname
+
+    // To install packages
+    npm install
+
+    // To start development server
+    npm run dev
+
+    // To create a production build and the generate zip file
+    npm run build
+    ```
+  </TabItem>
+  <TabItem label="yarn">
+    ```js
+    // To chagne directory
+    cd componentname
+
+    // To install packages
+    yarn install
+
+    // To start development server
+    yarn dev
+
+    // To create a production build and the generate zip file
+    yarn build
+    ```
+  </TabItem>
+  <TabItem label="pnpm">
+    ```js
+    // To chagne directory
+    cd componentname
+
+    // To install packages
+    pnpm install
+
+    // To start development server
+    pnpm run dev
+    
+    // To create a production build and the generate zip file
+    pnpm run build
+    ```
+  </TabItem>
+</Tabs>
+
+
+`dev` command will spin up a development server with an url which can be used inside kissflow's custom component builder for development purposes locally on your machine.
+
+After completing the development, you can build the component and generate a zip file which can be uploaded to Kissflow as a custom component.
 
 
 ## 2. As `npm` module
